--- a/app/src/main/res/layout/fragment_bank_list.xml
+++ b/app/src/main/res/layout/fragment_bank_list.xml
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.scwang.smart.refresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:srlDragRate="0.3"
-    app:srlEnableLoadMore="true"
-    app:srlEnablePureScrollMode="true"
+
     tools:context=".ui.withdraw.BankListFragment">
+    <LinearLayout
+        android:layout_marginTop="@dimen/margin_10"
+        android:layout_marginStart="@dimen/margin_16"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:textSize="@dimen/textSize20sp"
+            android:text="@string/my_bank_card"
+            android:textColor="@color/color_414655"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+
+            android:id="@+id/tv_bank_card_number"
+            android:textSize="@dimen/textSize14sp"
+            android:textColor="@color/color_414655"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,26 +50,15 @@
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize14sp"
             android:textStyle="bold" />
-        <LinearLayout
-            android:layout_marginTop="@dimen/margin_10"
-            android:layout_marginStart="@dimen/margin_16"
-            android:orientation="horizontal"
+
+        <com.scwang.smart.refresh.layout.SmartRefreshLayout
+            app:srlDragRate="0.3"
+            app:srlEnableLoadMore="true"
+            app:srlEnablePureScrollMode="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
-                android:textSize="@dimen/textSize20sp"
-                android:text="@string/my_bank_card"
-                android:textColor="@color/color_414655"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
 
-                android:id="@+id/tv_bank_card_number"
-                android:textSize="@dimen/textSize14sp"
-                android:textColor="@color/color_414655"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_bank_list"
             android:layout_width="match_parent"
@@ -54,8 +66,8 @@
             android:clipToPadding="false"
             android:overScrollMode="never"
             android:paddingBottom="10dp"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            tools:itemCount="2"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="5"
             tools:listitem="@layout/content_rv_bank_card_list"
             tools:orientation="vertical" />
         <androidx.cardview.widget.CardView
@@ -84,5 +96,5 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-
-</com.scwang.smart.refresh.layout.SmartRefreshLayout>
+    </androidx.core.widget.NestedScrollView>
+</LinearLayout>
