--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -33,7 +33,6 @@
             android:layout_height="@dimen/tool_bar_height"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingHorizontal="18dp"
             app:layout_scrollFlags="scroll|enterAlways"
             tools:ignore="SpUsage,RtlSymmetry,ContentDescription">
 
@@ -41,6 +40,7 @@
                 android:id="@+id/iv_menu_left"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
+                android:layout_marginStart="18dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@null"
                 android:scaleType="fitStart"
@@ -66,8 +66,9 @@
                 android:id="@+id/cl_bet_all_sports"
                 android:layout_width="wrap_content"
                 android:layout_height="28dp"
-                android:background="@drawable/selector_bg_home_tab_menu"
                 android:minWidth="100dp"
+                android:paddingHorizontal="5dp"
+                android:layout_marginEnd="13dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -75,8 +76,9 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:duplicateParentState="true"
+                    android:background="@drawable/selector_bg_home_tab_menu"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -90,6 +92,7 @@
                         android:layout_marginStart="13dp"
                         android:duplicateParentState="true"
                         android:text="@string/all_sport"
+                        android:textSize="@dimen/textSize14sp"
                         android:textColor="@color/selector_blue_white" />
 
                     <ImageView
@@ -178,7 +181,7 @@
                 android:layout_marginVertical="8dp"
                 android:layout_marginHorizontal="4dp"
                 android:drawablePadding="@dimen/margin_6"
-                android:text="@string/text_us_east_time"
+                android:text="@string/text_us_east_time_bet_record"
                 android:textColor="@color/color_6C7BA8_A7B2C4"
                 android:textSize="@dimen/textSize12sp"
                 app:layout_constraintEnd_toEndOf="parent"
