--- a/app/src/main/res/layout/item_sport_spinner.xml
+++ b/app/src/main/res/layout/item_sport_spinner.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="7dp">
+        android:paddingHorizontal="9dp"
+        android:paddingVertical="11dp">
 
         <TextView
             android:id="@+id/tvPlay"
@@ -19,9 +20,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textColor="@color/color_bbbbbb_ffffff"
+            android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize12sp"
-            tools:text="Goals O/U" />
+            tools:text="足球" />
     </LinearLayout>
 
     <View
@@ -29,6 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginHorizontal="10dp"
-        android:background="@color/color_A7B2C4" />
+        android:background="@color/color_6C7BA8_A7B2C4" />
 
 </LinearLayout>
