--- a/app/src/main/res/layout/activity_account_history_log.xml
+++ b/app/src/main/res/layout/activity_account_history_log.xml
@@ -41,7 +41,7 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/margin_36"
             android:layout_marginLeft="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_10"
             android:layout_marginRight="@dimen/margin_10"
@@ -115,38 +115,34 @@
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize12sp"/>
             </LinearLayout>
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <com.scwang.smart.refresh.layout.SmartRefreshLayout
 
+                <com.scwang.smart.refresh.layout.SmartRefreshLayout
+                    android:id="@+id/view_refresh"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="386dp"
                     app:srlDragRate="0.3"
                     app:srlEnableLoadMore="true"
-
                     app:srlEnablePureScrollMode="true">
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvlist"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/margin_1"
-                        android:layout_marginRight="@dimen/margin_1"
-                        android:layout_marginBottom="@dimen/margin_7"
                         android:overScrollMode="never"
-                        tools:itemCount="2"
                         tools:listitem="@layout/view_item_recharge_log" />
                     <include
                         android:id="@+id/view_no_record"
                         layout="@layout/view_no_record"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/rech_log_column"
+                        tools:visibility="gone"
                         />
+                    </FrameLayout>
                 </com.scwang.smart.refresh.layout.SmartRefreshLayout>
-            </FrameLayout>
+
+
         </LinearLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:visibility="gone"
