--- a/app/src/main/res/layout/activity_recharge_log.xml
+++ b/app/src/main/res/layout/activity_recharge_log.xml
@@ -33,7 +33,13 @@
             app:textColor="#6C7BA8"
             app:listBackground="@drawable/bg_pop_up_arrow"
             app:listWidth="120dp"/>
-
+        <View
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="@dimen/margin_12"
+            android:layout_marginBottom="@dimen/margin_12"
+            android:background="@color/color_E3E8EE"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"/>
         <org.cxct.sportlottery.ui.component.StatusSpinnerView
             android:id="@+id/selector_method_status"
             android:layout_width="0dp"
@@ -78,7 +84,12 @@
                 android:text="@string/recharge_log_order_time"
                 android:textColor="@color/color_414655"
                 android:textSize="@dimen/textSize12sp" />
-
+            <View
+                android:layout_marginTop="@dimen/margin_12"
+                android:layout_marginBottom="@dimen/margin_12"
+                android:background="@color/color_E3E8EE"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"/>
             <TextView
                 android:id="@+id/rech_log_recharge_amount"
                 android:layout_width="0dp"
@@ -90,7 +101,12 @@
                 android:text="@string/recharge_log_recharge_amount"
                 android:textColor="@color/color_414655"
                 android:textSize="@dimen/textSize12sp" />
-
+            <View
+                android:layout_marginTop="@dimen/margin_12"
+                android:layout_marginBottom="@dimen/margin_12"
+                android:background="@color/color_E3E8EE"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -101,7 +117,12 @@
                 android:text="@string/recharge_log_channel_type"
                 android:textColor="@color/color_414655"
                 android:textSize="@dimen/textSize12sp" />
-
+            <View
+                android:layout_marginTop="@dimen/margin_12"
+                android:layout_marginBottom="@dimen/margin_12"
+                android:background="@color/color_E3E8EE"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
