--- a/app/src/main/res/layout/fragment_money_transfer_record.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_record.xml
@@ -33,6 +33,8 @@
                     app:listWidth="120dp"
                     app:textColor="#6C7BA8" />
                 <View
+                    android:layout_marginTop="@dimen/margin_12"
+                    android:layout_marginBottom="@dimen/margin_12"
                     android:layout_width="1dp"
                     android:layout_height="14dp"
                     android:layout_gravity="center_vertical"
@@ -84,7 +86,7 @@
                     <LinearLayout
                         android:id="@+id/linearLayout5"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/margin_36"
                         android:layout_marginLeft="@dimen/margin_1"
                         android:layout_marginTop="@dimen/margin_1"
                         android:layout_marginRight="@dimen/margin_1"
