--- a/app/src/main/res/layout/activity_money_recharge.xml
+++ b/app/src/main/res/layout/activity_money_recharge.xml
@@ -127,6 +127,7 @@
 
     <!--20220802 充值畫面增加聯繫在線客服的入口，不需要判斷是否隱藏-->
     <org.cxct.sportlottery.ui.common.ServiceFloatingButton
+        android:visibility="gone"
         android:id="@+id/btn_floating_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
