--- a/app/src/main/res/layout/crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/crypto_pay_fragment.xml
@@ -229,6 +229,7 @@
         </androidx.cardview.widget.CardView>
         <!-- 充值個數 -->
         <org.cxct.sportlottery.ui.login.LoginEditText
+            app:cvTextColor="@color/color_9BB3D9_535D76"
             android:id="@+id/et_recharge_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -260,6 +261,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            app:cvTextColor="@color/color_9BB3D9_535D76"
             app:cvHint="@string/hint_transaction_id"
             app:cvInputType="text"
             app:cvTitle="@string/title_transaction_id" />
@@ -344,8 +346,31 @@
             android:text="@string/hint_fee_amount"
             android:textColor="@color/color_E44438_e44438"
             android:textSize="@dimen/textSize12sp" />
-
         <androidx.cardview.widget.CardView
+            app:cardCornerRadius="@dimen/margin_8"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_width="match_parent"
+            android:layout_height="83dp">
+            <LinearLayout
+                android:id="@+id/cv_upload_image"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:src="@drawable/add_bank_card"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_marginLeft="@dimen/dp_4"
+                    android:text="@string/title_upload_pic"
+                    android:textSize="@dimen/textSize16sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -464,7 +489,30 @@
             android:textSize="@dimen/textSize16sp"
             android:textStyle="bold"
             style="?android:attr/borderlessButtonStyle"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/margin_20"
+            android:layout_marginTop="@dimen/margin_20"
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/customer_service"
+                android:textColor="@color/color_A5A9B3"
+                android:textSize="@dimen/textSize14sp"/>
+
+            <TextView
+                android:id="@+id/tv_service"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_service"
+                android:textColor="@color/color_025BE8"
+                android:textSize="@dimen/textSize14sp"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
