--- a/app/src/main/res/layout/content_money_pay_type_rv.xml
+++ b/app/src/main/res/layout/content_money_pay_type_rv.xml
@@ -28,9 +28,8 @@
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:paddingEnd="4dp"
+        android:textColor="@color/selector_blue_black"
         android:singleLine="true"
-
-        android:textColor="@color/color_025BE8"
         android:textSize="@dimen/textSize12sp"
         tools:text="银行卡转账" />
 
