--- a/app/src/main/res/layout/fragment_feedback_record_list.xml
+++ b/app/src/main/res/layout/fragment_feedback_record_list.xml
@@ -4,108 +4,127 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_141414_F3F4F5"
-    android:orientation="vertical"
+    android:background="@color/color_FFFFFF"
     tools:context=".ui.feedback.record.FeedbackRecordListFragment">
     <!-- Tab bar-->
     <View
         android:id="@+id/view_layout"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/color_E3E8EE"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_10"/>
     <org.cxct.sportlottery.ui.component.DateRangeSearchNewView
         android:id="@+id/date_range_selector"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_layout"
+        android:layout_marginTop="@dimen/margin_20"
+        app:layout_constraintTop_toTopOf="parent"
         app:minusDays="8" />
-
-    <org.cxct.sportlottery.ui.component.StatusSpinnerView
-        android:id="@+id/status_selector"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:background="@color/color_232C4F_F3F9FF"
-        app:defaultStatusText="@string/all_status"
-        app:layout_constraintTop_toBottomOf="@id/date_range_selector"/>
-
     <LinearLayout
+        android:layout_marginTop="@dimen/margin_10"
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_20"
-        android:layout_marginRight="@dimen/margin_20"
-        android:background="@color/color_232C4F_F4F4F4"
-        android:gravity="center"
-        android:minHeight="30dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/status_selector">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/feedback_last_reply_time"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize12sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:text="@string/feedback_content_description"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize12sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/status"
-            android:textColor="@color/color_BBBBBB_333333"
-            android:textSize="@dimen/textSize12sp" />
-
+        android:layout_height="44dp"
+        android:background="@color/color_191919_FCFCFC"
+        app:layout_constraintTop_toBottomOf="@id/date_range_selector">
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
+            android:id="@+id/status_selector"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@color/color_232C4F_F3F9FF"
+            app:defaultStatusText="@string/all_status"
+            app:layout_constraintTop_toBottomOf="@id/date_range_selector"/>
     </LinearLayout>
 
-    <com.scwang.smart.refresh.layout.SmartRefreshLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:srlDragRate="0.3"
-        app:srlEnableLoadMore="true"
-        app:srlEnablePureScrollMode="true"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_marginRight="@dimen/margin_10"
+        android:background="@drawable/bg_square_shape_6dp_gray_deposit_stroke"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/margin_10"
         app:layout_constraintTop_toBottomOf="@id/linearLayout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
-
-        <FrameLayout
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <LinearLayout
+            android:id="@+id/rech_log_column"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_white_top_radius_deposit_10"
+            android:gravity="center"
+            android:minHeight="30dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/status_selector">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_pay_type"
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/feedback_last_reply_time"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textSize="@dimen/textSize12sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text="@string/feedback_content_description"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textSize="@dimen/textSize12sp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/status"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textSize="@dimen/textSize12sp" />
+
+        </LinearLayout>
+
+        <com.scwang.smart.refresh.layout.SmartRefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="386dp"
+            android:layout_marginLeft="@dimen/margin_1"
+            android:layout_marginRight="@dimen/margin_1"
+            android:layout_marginBottom="@dimen/margin_7"
+            app:layout_constraintTop_toBottomOf="@id/rech_log_column"
+            app:srlDragRate="0.3"
+            app:srlEnableLoadMore="true"
+            app:srlEnablePureScrollMode="true"
+            >
+
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:overScrollMode="never"
-                tools:itemCount="5"
-                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/content_feedback_record_list_rv"
-                tools:orientation="vertical"
-                tools:visibility="visible" />
+                android:layout_height="match_parent">
 
-            <include
-                tools:visibility="gone"
-                android:id="@+id/view_no_record"
-                layout="@layout/view_no_record"/>
-        </FrameLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_pay_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:overScrollMode="never"
+                    tools:itemCount="5"
+                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/content_feedback_record_list_rv"
+                    tools:orientation="vertical"
+                    tools:visibility="visible" />
 
-    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+                <include
+                    tools:visibility="gone"
+                    android:id="@+id/view_no_record"
+                    layout="@layout/view_no_record"/>
+            </FrameLayout>
+
+        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+    </LinearLayout>
+
 
     <ImageView
         android:visibility="gone"
