--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -163,4 +163,5 @@
     <color name="color_FFFFFF_535D76">@color/color_FFFFFF</color>
     <color name="color_202541_F7F8FC">@color/color_202541</color>
     <color name="color_334266_DDE1F4">@color/color_334266</color>
+    <color name="color_9FADC6_535D76">@color/color_9FADC6</color>
 </resources>
